2021-03-03  Stanislas Rolland  <typo32021(arobas)sjbr.ca>

    * Resolves #93570: Typo in name of country zone Newfoundland

2020-10-24  Stanislas Rolland  <typo32020(arobas)sjbr.ca>

    * Resolves #92615: Missing language label in TCA
    * Update version to 6.9.5

2020-11-21  Stanislas Rolland  <typo32020(arobas)sjbr.ca>

    * Update version to 6.9.4

2020-10-23  Stanislas Rolland  <typo32020(arobas)sjbr.ca>

    * Resolves #92615: Missing language label in TCA

2020-10-19  Stanislas Rolland  <typo32020(arobas)sjbr.ca>

    * Update version to 6.9.3

2020-06-09  Stanislas Rolland  <typo32020(arobas)sjbr.ca>

    * Resolves #91626: Remove any code related to TYPO3 prior to 9 LTS
    * Require TYPO3 9 LTS
    * Update version to 6.8.0

2020-06-04  Stanislas Rolland  <typo32020(arobas)sjbr.ca>

    * Resolves #91587: Streamline some redundant code in language pack
    * Resolves #91590: Fix ordering of record lists in current language in backend
    * Resolves #88684: Only run update script when extensions have changed

2020-06-03  Stanislas Rolland  <typo32020(arobas)sjbr.ca>

    * Resolves #91250: Add php configuration file for Extbase persistence mapping
    * Resolves #90274: Add support for PHP 7.4
    * Resolves #91251: Add Symfony dependency injection configuration
    * Resolves #91567: Add php configuration file for Extbase persistence mapping to generated language pack
    * Resolves #91575: Use Symfony expression language for TypoScript conditions
    * Resolves #91252: Adapt to changed arguments of Extensionmanager\Utility\EmConfUtility\includeEmConf in TYPO3 10
    * Resolves #91577: Delete @lazy annotation removed in TYPO3 10
    * Resolves #90741: Enable in TYPO3 LTS 10
    * Update version to 6.8.0

2020-01-05  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #88867: Raise PHP dependency to < 7.4

2019-10-17  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #88683: Updater uses default columns in TYPO3 9