@@ -63,7 +63,7 @@ return [
             ],
         ],
         'zn_name_local' => [
-            'label' => 'LLL:EXT:lang/locallang_general.xlf:LGL.name',
+            'label' => 'LLL:EXT:core/Resources/Private/Language/locallang_general.xlf:LGL.name',
             'exclude' => '0',
             'config' => [
                 'type' => 'input',
