@@ -61,7 +61,7 @@ return [
             ],
         ],
         'tr_name_en' => [
-            'label' => 'LLL:EXT:lang/locallang_general.xlf:LGL.name',
+            'label' => 'LLL:EXT:core/Resources/Private/Language/locallang_general.xlf:LGL.name',
             'exclude' => '0',
             'config' => [
                 'type' => 'input',
