@@ -1,6 +1,7 @@
 2021-03-03  Stanislas Rolland  <typo32021(arobas)sjbr.ca>
 
     * Resolves #93570: Typo in name of country zone Newfoundland
+    * Resolves #93265: Deprecated language file references
 
 2020-10-24  Stanislas Rolland  <typo32020(arobas)sjbr.ca>
 
